--- a/app/assets/stylesheets/items/new.css
+++ b/app/assets/stylesheets/items/new.css
@@ -89,6 +89,34 @@
   margin-bottom: 15px;
 }
 
+.image-delete-button {
+  text-align: center;
+  border: black solid 1px;
+  cursor: pointer;
+  margin: 15px 0;
+  background-color: red;
+  color: white;
+  border-radius: 3px;
+  display: block;
+}
+
+.image-delete-button:hover {
+  background-color: thistle;
+}
+
+#item-image {
+  margin-bottom: 10px;
+}
+
+.image-add-btn {
+  margin-bottom: 10px;
+}
+
+.preview-image {
+  width: 40vw;
+
+}
+
 /* /商品画像 */
 
 /* 商品名と商品説明 */
