--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,8 +131,8 @@
         <li class='list'>
           <%= link_to item_path(item) do %>
           <div class='item-img-content'>
-            <%= image_tag item.image, class: "item-img" %>
-
+            <%= image_tag item.images[0], class: "item-img"%>
+           
             <% if item.buy.present?%>
               <div class='sold-out'>
                 <span>Sold Out!!</span>
