--- a/app/assets/stylesheets/orders/index.css
+++ b/app/assets/stylesheets/orders/index.css
@@ -155,3 +155,15 @@
   font-size: 14px;
   cursor: pointer;
 }
+
+.back-btn {
+  font-size: 14px;
+  background: #aaa;
+  border: 1px solid #aaa;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  padding: 11px 0;
+  display: block;
+  margin-top: 20px;
+}
