--- a/app/views/buys/index.html.erb
+++ b/app/views/buys/index.html.erb
@@ -124,8 +124,10 @@
     <%# /配送先の入力 %>
     <div class='buy-btn'>
       <%= f.submit "購入" ,class:"buy-red-btn", id:"button" %>
+      <%=link_to 'もどる', item_path(@item), class:"back-btn" %>
     </div>
     <% end %>
+    
   </div>
 </div>
 <%= render "shared/second-footer"%>
